# DRAMsim3-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
src/: ffi.rs  lib.rs
