[package]
name = "dramsim3"
version = "0.2.1"
edition = "2021"
description = "Rust binding for DRAMsim3"
license = "MIT"
repository = "https://github.com/CircuitCoder/DRAMsim3-rs"

[dependencies]
libc = "0.2.155"

[build-dependencies]
cmake = "0.1.50"

[dev-dependencies]
anyhow = "1.0.86"
tempfile = "3.10.1"
