[package]
name = "dramsim3"
version = "0.2.2"
edition = "2021"
description = "Rust binding for DRAMsim3"
license = "MIT"
repository = "https://github.com/CircuitCoder/DRAMsim3-rs"

[dependencies]
libc = "0.2.178"

[build-dependencies]
cmake = "0.1.57"

[dev-dependencies]
anyhow = "1.0.100"
tempfile = "3.23.0"
